Revision history for firebird_fdw

1.4.0	2024-0?-??
	- Support for PostgreSQL 17 added
	- Basic support for UUID datatype added
	- Proper support for Firebird TIME/TIMESTAMP datatypes added
	- Support for Firebird TIME WITH TIME ZONE / TIMESTAMP WITH TIME ZONE
	  datatypes added
	- Support for importing Firebird INT128 datatype added
	- Import Firebird FLOAT as PostgreSQL REAL

1.3.1	2023-06-22
	- Support for PostgreSQL 16 added

1.3.0	2022-12-28
	- Support for PostgreSQL 15 added
	- Support for PostgreSQL 9.3/9.4 removed
	- Basic support for TRUNCATE (PostgreSQL 14+)
	- Support for batch inserts via COPY added (PostgreSQL 14+)
	- Map some PostgreSQL server encodings to the Firebird equivalent
	  where no Firebird encoding alias exists
	- Various fixes and improvements for IMPORT FOREIGN SCHEMA

1.2.3	2022-02-11
	- Fix bug in rescan handling
	- Adapt TAP tests to support PostgreSQL 15

1.2.2	2021-09-15
	- Invalid Firebird server port numbers will be rejected
	- Enable provision of custom Firebird port for TAP tests
	- Support PostgreSQL 14
	- Adapt for API changes introduced in PostgreSQL 11+
	- Support for versions earlier than PostgreSQL 9.3 removed
	- Ensure non-superusers can execute firebird_version()

1.2.1	2020-10-21
	- Fix builds for recent Fedora versions

1.2.0	2020-10-17
	- Add support for PostgreSQL 13
	- Add support for generated columns (PostgreSQL 12 and later)
	- Add support for COPY and partition tuple routing (PostgreSQL 11 and later)
	- Add table/column option "quote_identifier"
	- Add server option "quote_identifiers"
	- Have IMPORT FOREIGN SCHEMA add "quote_identifier" where appropriate
	- Add support for implicit boolean columns
	- Push down boolean tests in WHERE clauses where possible
	- Add function firebird_fdw_server_options()
	- Add function firebird_version()
	- When analyzing a foreign table, only retrieve the columns defined in
	  that table
	- Have EXPLAIN for a remote modify show the Firebird query used