@@ -8,6 +8,7 @@ Revision history for firebird_fdw
 	  datatypes added
 	- Support for importing Firebird INT128 datatype added
 	- Import Firebird FLOAT as PostgreSQL REAL
+	- Fix generated columns support
 
 1.3.1	2023-06-22
 	- Support for PostgreSQL 16 added
